Display category on locations template.

--- a/templates/locations.html
+++ b/templates/locations.html
@@ -2,7 +2,7 @@
 
 <!-- begin block content here -->
 
-<h1></h1> <!-- insert category here -->
+<h1>{{ categories[category] }}</h1> <!-- insert category here -->
 
 <div class="navbar">
   <!-- begin for loop here -->
