--- a/templates/locations.html
+++ b/templates/locations.html
@@ -25,8 +25,8 @@
         <!-- start if statement here -->
 
         <form method="POST">
-          <input type="submit" class="up" name="" value=&#8599;> <!-- set name attribute here -->
-          <input type="submit" class="del" name="" value="X"> <!-- set name attribute here -->
+          <input type="submit" class="up" name="{{ location.name }}" value=&#8599;>
+          <input type="submit" class="del" name="{{ location.name }}" value="X">
         </form>
         <!-- end if statement here -->
 
